5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1578_1559.log
== SUBMITION (2019-03-13 18:21:13) 
-- CODE:
frase = "Ada lovelace foi a primeira programadora da historia"
print(.upper("Ada lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME:
0.162884
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(.upper("Ada lovelace foi a primeira programadora da historia"))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:22:12) 
-- CODE:
frase = "Ada lovelace foi a primeira programadora da historia"
print(".upper("Ada lovelace foi a primeira programadora da historia)")
-- EXECUTION TIME:
0.165138
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(".upper("Ada lovelace foi a primeira programadora da historia)")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:22:16) 
-- CODE:
frase = "Ada lovelace foi a primeira programadora da historia"
print(".upper("Ada lovelace foi a primeira programadora da historia)")
-- EXECUTION TIME:
0.136111
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(".upper("Ada lovelace foi a primeira programadora da historia)")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:22:24) 
-- CODE:
frase = "Ada lovelace foi a primeira programadora da historia"
print(".upper("Ada lovelace foi a primeira programadora da historia"")")
-- EXECUTION TIME:
0.273381
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(".upper("Ada lovelace foi a primeira programadora da historia"")")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:22:31) 
-- CODE:
frase = "Ada lovelace foi a primeira programadora da historia"
print(".upper("Ada lovelace foi a primeira programadora da historia")")
-- EXECUTION TIME:
0.139815
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(".upper("Ada lovelace foi a primeira programadora da historia")")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:22:53) 
-- CODE:
frase = "Ada lovelace foi a primeira programadora da historia"
print(".upper(Ada lovelace foi a primeira programadora da historia)")
-- EXECUTION TIME:
0.173225
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(Ada lovelace foi a primeira programadora da historia)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:23:05) 
-- CODE:
frase = "Ada lovelace foi a primeira programadora da historia"
print(".upper(Ada lovelace foi a primeira programadora da historia)")
-- EXECUTION TIME:
0.146845
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(Ada lovelace foi a primeira programadora da historia)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:23:21) 
-- CODE:
frase = ""
print(".upper(Ada lovelace foi a primeira programadora da historia)")
-- EXECUTION TIME:
0.145491
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(Ada lovelace foi a primeira programadora da historia)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:08:23) 
-- CODE:
frase = ""
print(".upper(ada lovelace foi a primeira programadora da historia)")
-- EXECUTION TIME:
0.142566
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(ada lovelace foi a primeira programadora da historia)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:53:05) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.194147
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 15:53:14) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:53:19) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.207656
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:53:36) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.132487
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 15:53:38) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 15:53:39) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:54:00) 
-- CODE:
frase = ""
print(frase.upper())
-- EXECUTION TIME:
0.176468
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:54:04) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.153887
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
